--- a/src/app/img-viewer/img-viewer.component.html
+++ b/src/app/img-viewer/img-viewer.component.html
@@ -1,167 +1,236 @@
-
-<!-- <div class="content" style="display: flex;"> 
-    <div class="btns">
-      <button
-        *ngFor="let img of images; let i = index"
-        matRipple
-        matRippleColor="#ced6e6"
-        (click)="curPage = i; showPic()"
-        [ngClass]="{ active: i === curPage }"
+<div class="content" style="display: flex">
+  <div class="btns">
+    <button
+      *ngFor="let img of images; let i = index"
+      matRipple
+      matRippleColor="#ced6e6"
+      (click)="curPage = i; showPic()"
+      [ngClass]="{ active: i === curPage }"
+    >
+      <span *ngIf="i === curPage" style="color: #000000">{{ i + 1 }}</span>
+      <span *ngIf="i !== curPage">
+        <span *ngIf="locationRects[i]" style="color: #ffd700">{{ i + 1 }}</span>
+        <span *ngIf="!locationRects[i]" style="color: #ffffff">{{
+          i + 1
+        }}</span>
+      </span>
+    </button>
+  </div>
+  <div class="canvas">
+    <canvas id="canvas"></canvas>
+  </div>
+  <div class="table">
+    <p-table
+      [value]="rows"
+      dataKey="id"
+      [tableStyle]="{ 'min-width': '60rem' }"
+      selectionMode="single"
+      [metaKeySelection]="true"
+      [(selection)]="selectedRow"
+      [scrollable]="true"
+      [scrollHeight]="100 + 'vh'"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th style="width: 5rem"></th>
+          <th *ngFor="let header of headers">{{ header }}</th>
+        </tr>
+      </ng-template>
+      <ng-template
+        pTemplate="body"
+        let-row
+        let-expanded="expanded"
+        let-editing="editing"
       >
-        <span *ngIf="i === curPage" style="color: #000000;">{{ i + 1 }}</span>
-        <span *ngIf="i !== curPage">
-          <span *ngIf="locationRects[i]" style="color: #FFD700;">{{
-            i + 1
-          }}</span>
-          <span *ngIf="!locationRects[i]" style="color: #ffffff;">{{
-            i + 1
-          }}</span>
-        </span>
-      </button>
-    </div>
-    <div class="canvas">
-      <canvas id="canvas"></canvas>
-    </div>
-    <div class="table">
-      <table mat-table [dataSource]="rows">
-        <ng-container *ngFor="let header of headers" [matColumnDef]="header">
-          <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
-          <td mat-cell *matCellDef="let element">
-            <ng-container
-              *ngIf="
-                header !== 'Components' &&
-                  header !== 'Locations' &&
-                  header !== 'V';
-                else customCell
-              "
-            >
-              <span
-                matTooltip="{{ element[header] || '-' }}"
-                matTooltipShowDelay="1000"
-                matTooltipPosition="above"
-              >
-                {{ element[header] || '-' }}
-              </span>
-            </ng-container>
-            <ng-template #customCell>
-              <ng-container
-                *ngIf="header === 'Components'; else editOrLocation"
-              >
-              </ng-container>
-              <ng-template #editOrLocation>
-                <ng-container *ngIf="header === 'Locations' && element['Locations']; else editCell">
-                  <mat-icon
-                    aria-hidden="false"
-                    fontIcon="my_location"
-                    matTooltip="定位原文"
-                    style="color: #789DE5;cursor: pointer;margin-right:5px"
-                    (click)="
-                      clickItem(element, 'Locations');
-                    "
-                  ></mat-icon>
-                  <mat-icon
-                    aria-hidden="false"
-                    fontIcon="draw"
-                    (click)="correct(element,'draw')"
-                    matTooltip="修正位置"
-                    style="color: #789DE5;cursor: pointer;"
-                  ></mat-icon>
-                  <mat-icon
-                    aria-hidden="false"
-                    fontIcon="add"
-                    (click)="correct(element,'add')"
-                    matTooltip="新增位置"
-                    style="color: #789DE5;cursor: pointer;"
-                  ></mat-icon>
-                </ng-container>
-                <ng-template #editCell>
-                  <div (dblclick)="editCellOne(element, header)">
-                    <textarea
-                      *ngIf="isEditing(element, header)"
-                      [(ngModel)]="element[header]"
-                      (blur)="stopEditing()"
-                      type="textarea"
-                    ></textarea>
-                    <span
-                      *ngIf="!isEditing(element, header)"
-                      matTooltip="{{ element[header] || '-' }}"
-                      matTooltipShowDelay="1000"
-                      matTooltipPosition="above"
-                      >{{ element[header] || '-' }}</span
-                    >
-                  </div>
-                </ng-template>
+        <tr [pSelectableRow]="row">
+          <td *ngIf="isArray(row['Q'])">
+            <p-button
+              type="button"
+              pRipple
+              [pRowToggler]="row"
+              [text]="true"
+              [rounded]="true"
+              [plain]="true"
+              [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
+              (click)="$event.stopPropagation()"
+            ></p-button>
+          </td>
+          <td *ngIf="!isArray(row['Q'])"></td>
+          <td [pTooltip]="row['Title']" tooltipPosition="top" showDelay="500" >
+          {{ row['Title'] }}
+        </td>
+          <td [pTooltip]="row['Property']" tooltipPosition="top" showDelay="500">
+            {{ row['Property'] }}
+          </td>
+          <td [pEditableColumn]="row['V']" pEditableColumnField="V" [pTooltip]="row['V']" tooltipPosition="top" showDelay="500">
+            <p-cellEditor>
+              <ng-template pTemplate="input">
+                  <textarea 
+                      rows="20"
+                      pInputTextarea
+                      [(ngModel)]="row['V']" >
+                  </textarea>
               </ng-template>
+              <ng-template pTemplate="output">
+                  {{ row['V'] }}
+              </ng-template>
+          </p-cellEditor>
+          </td>
+          <td [pTooltip]="row['Confidence']" tooltipPosition="top" showDelay="500">
+            {{ row['Confidence'] }}
+          </td>
+          <td [pTooltip]="!isArray(row['Q'])?row['Q'] : '-'" tooltipPosition="top" showDelay="500">
+            <ng-container *ngIf="!isArray(row['Q']); else empty">
+              {{ row['Q'] }}
+            </ng-container>
+            <ng-template #empty>
+              <span>-</span>
             </ng-template>
           </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="headers"></tr>
-        <tr
-          mat-row
-          *matRowDef="let row; columns: headers"
-          [ngClass]="{ active: row === activeRow }"
-          (click)="activeRow = row"
-        ></tr>
-      </table>
-    </div>
-    <p-sidebar [(visible)]="sidebarVisible" class="sidebar">
-      <ng-template pTemplate="header">
-        <span class="font-semibold text-xl">projects</span>
-    </ng-template>
-    <div style="display: flex;align-items: center;justify-content: center;" *ngFor="let file of files" class="button" (click)="goFile(file)">
-      <mat-icon aria-hidden="false" fontIcon="folder"></mat-icon>
-      <p> {{ file }}</p>
-    </div>
-    <mat-icon style="position: fixed;left: 20px;bottom: 20px;cursor: pointer;" aria-hidden="false" fontIcon="home" (click)="goHome()"></mat-icon>
-  </p-sidebar>
-  <mat-icon class="sideBtn" (click)="sidebarVisible = true" fontIcon="list"></mat-icon>
-  </div> -->
-
-  <div class="table">
-    <p-table [value]="rows" dataKey="arousal_trend" [tableStyle]="{ 'min-width': '60rem' }">
-        <ng-template pTemplate="header">
-            <tr>
-              <th style="width: 5rem"></th>
-              <th *ngFor="let header of headers" > {{header}} </th>     
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-row let-expanded="expanded">
-            <tr>
-              <td>
-                <p-button type="button" pRipple [pRowToggler]="row" [text]="true" [rounded]="true" [plain]="true" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'" />
-            </td>
-                <ng-container *ngFor="let header of headers">
-                    <td *ngIf="header !== 'Locations'; else editOrLocation">
-                        {{row[header]}}
+          <td>
+            <ng-container *ngIf="!isArray(row['Q']); else empty">
+              <mat-icon
+                aria-hidden="false"
+                fontIcon="my_location"
+                matTooltip="定位原文"
+                style="color: #789de5; cursor: pointer; margin-right: 5px"
+                (click)="clickItem(row, 'Locations')"
+              >
+              </mat-icon>
+              <mat-icon
+                aria-hidden="false"
+                fontIcon="draw"
+                matTooltip="修正位置"
+                style="color: #789de5; cursor: pointer"
+                (click)="correct(row, 'draw')"
+              >
+              </mat-icon>
+              <mat-icon
+                aria-hidden="false"
+                fontIcon="add"
+                matTooltip="新增位置"
+                style="color: #789de5; cursor: pointer"
+                (click)="correct(row, 'add')"
+              >
+              </mat-icon>
+            </ng-container>
+            <ng-template #empty>
+              <span>-</span>
+            </ng-template>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="rowexpansion" let-row let-editing="editing">
+        <tr>
+          <td colspan="7">
+            <div class="p-3">
+              <p-table
+                [value]="row['Q']"
+                dataKey="id"
+                selectionMode="single"
+                [(selection)]="selectedRow"
+                [metaKeySelection]="true"
+              >
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th style="width: 5rem"></th>
+                    <th *ngFor="let header of headers">{{ header }}</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-item>
+                  <tr [pSelectableRow]="item">
+                    <td style="width: 5rem"></td>
+                    <td [pTooltip]="item['title']" tooltipPosition="top" showDelay="500">
+                      {{ item.title }}
                     </td>
-                    <ng-template #editOrLocation>
-                        <td>
-                            <mat-icon
-                                aria-hidden="false"
-                                fontIcon="my_location"
-                                matTooltip="定位原文"
-                                style="color: #789DE5;cursor: pointer;margin-right:5px"
-                                (click)="clickItem(row, 'Locations')"
-                            ></mat-icon>
-                            <mat-icon
-                                aria-hidden="false"
-                                fontIcon="draw"
-                                (click)="correct(row,'draw')"
-                                matTooltip="修正位置"
-                                style="color: #789DE5;cursor: pointer;"
-                            ></mat-icon>
-                            <mat-icon
-                                aria-hidden="false"
-                                fontIcon="add"
-                                (click)="correct(row,'add')"
-                                matTooltip="新增位置"
-                                style="color: #789DE5;cursor: pointer;"
-                            ></mat-icon>
-                        </td>
-                    </ng-template>
-                </ng-container>
-            </tr>
-        </ng-template>
-        
+                    <td [pTooltip]="item['Property']" tooltipPosition="top" showDelay="500">
+                      {{ item['Property'] }}
+                    </td>
+                    <td [pEditableColumn]="item['text']" pEditableColumnField="text" [pTooltip]="item['text']" tooltipPosition="top" showDelay="500">
+                      <p-cellEditor>
+                        <ng-template pTemplate="input">
+                            <textarea 
+                                rows="20"
+                                pInputTextarea
+                                [(ngModel)]="item['text']" >
+                            </textarea>
+                        </ng-template>
+                        <ng-template pTemplate="output">
+                            {{ item['text'] }}
+                        </ng-template>
+                    </p-cellEditor>
+                    </td>
+                    <td [pTooltip]="item['Confidence']" tooltipPosition="top" showDelay="500">
+                      {{ item.Confidence }}
+                    </td>
+                    <td pTooltip="-" tooltipPosition="top" showDelay="500">-</td>
+                    <td>
+                      <ng-container *ngIf="item.Locations; else empty">
+                        <mat-icon
+                          aria-hidden="false"
+                          fontIcon="my_location"
+                          matTooltip="定位原文"
+                          style="
+                            color: #789de5;
+                            cursor: pointer;
+                            margin-right: 5px;
+                          "
+                          (click)="clickItem(row, 'Locations')"
+                        >
+                        </mat-icon>
+                        <mat-icon
+                          aria-hidden="false"
+                          fontIcon="draw"
+                          matTooltip="修正位置"
+                          style="color: #789de5; cursor: pointer"
+                          (click)="correct(row, 'draw')"
+                        >
+                        </mat-icon>
+                        <mat-icon
+                          aria-hidden="false"
+                          fontIcon="add"
+                          matTooltip="新增位置"
+                          style="color: #789de5; cursor: pointer"
+                          (click)="correct(row, 'add')"
+                        >
+                        </mat-icon>
+                      </ng-container>
+                      <ng-template #empty>
+                        <span>-</span>
+                      </ng-template>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
     </p-table>
+  </div>
+  <p-sidebar [(visible)]="sidebarVisible" class="sidebar">
+    <ng-template pTemplate="header">
+      <span class="font-semibold text-xl">projects</span>
+    </ng-template>
+    <div
+      style="display: flex; align-items: center; justify-content: center"
+      *ngFor="let file of files"
+      class="button"
+      (click)="goFile(file)"
+    >
+      <mat-icon aria-hidden="false" fontIcon="folder"></mat-icon>
+      <p>{{ file }}</p>
+    </div>
+    <mat-icon
+      style="position: fixed; left: 20px; bottom: 20px; cursor: pointer"
+      aria-hidden="false"
+      fontIcon="home"
+      (click)="goHome()"
+    ></mat-icon>
+  </p-sidebar>
+  <mat-icon
+    class="sideBtn"
+    (click)="sidebarVisible = true"
+    fontIcon="list"
+  ></mat-icon>
 </div>
