--- a/src/app/img-viewer/img-viewer.component.scss
+++ b/src/app/img-viewer/img-viewer.component.scss
@@ -1,8 +1,8 @@
 .content {
   display: flex;
   .btns {
-    display: flex;
-    justify-content: space-around;
+    // display: flex;
+    // justify-content: space-around;
     position: absolute;
     border-radius: 20px;
     padding: 10px;
@@ -10,6 +10,9 @@
     top: 0;
     left: 0;
     z-index: 3;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 10px;
     button {
       border-radius: 50%;
       width: 40px;
