Optimize code for loading table data in ImgViewerComponent and sort files by number in HomeComponent

--- a/src/app/img-viewer/img-viewer.component.html
+++ b/src/app/img-viewer/img-viewer.component.html
@@ -1,5 +1,5 @@
 <div class="content" style="display: flex">
-  <div class="btns">
+  <div class="btns" id="btns">
     <button
       *ngFor="let img of images; let i = index"
       matRipple
